Minor code updates.

--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,8 @@
+/.vs/*
+/intermediate/*
 /bin/IntroToDXR.iobj
 /bin/IntroToDXR.ipdb
-/bin/IntroToDXR_d.ilk
-/.vs/IntroToDXR/v15/.suo
-/.vs/IntroToDXR/v15/Browse.VC.db
-/.vs/IntroToDXR/v15/Browse.VC.opendb
-/.vs/IntroToDXR/v15/ipch/AutoPCH/1cc705bdb6cb1ffd/MAIN.ipch
-/.vs/IntroToDXR/v15/ipch/AutoPCH/3ba5eca769ae4cbd/MAIN.ipch
-/.vs/IntroToDXR/v15/ipch/AutoPCH/bbe2c654be9030ab/GRAPHICS.ipch
-/intermediate/Debug/Graphics.obj
-/intermediate/Debug/IntroToDXR.log
-/intermediate/Debug/IntroToDXR.tlog/CL.command.1.tlog
-/intermediate/Debug/IntroToDXR.tlog/CL.read.1.tlog
-/intermediate/Debug/IntroToDXR.tlog/CL.write.1.tlog
-/intermediate/Debug/IntroToDXR.tlog/IntroToDXR.lastbuildstate
-/intermediate/Debug/IntroToDXR.tlog/link.command.1.tlog
-/intermediate/Debug/IntroToDXR.tlog/link.read.1.tlog
-/intermediate/Debug/IntroToDXR.tlog/link.write.1.tlog
-/intermediate/Debug/Utils.obj
-/intermediate/Debug/Window.obj
-/intermediate/Debug/main.obj
-/intermediate/Debug/vc141.idb
-/intermediate/Debug/vc141.pdb
-/intermediate/Release/Graphics.obj
-/intermediate/Release/IntroToDXR.log
-/intermediate/Release/IntroToDXR.tlog/CL.command.1.tlog
-/intermediate/Release/IntroToDXR.tlog/CL.read.1.tlog
-/intermediate/Release/IntroToDXR.tlog/CL.write.1.tlog
-/intermediate/Release/IntroToDXR.tlog/IntroToDXR.lastbuildstate
-/intermediate/Release/IntroToDXR.tlog/IntroToDXR.write.1u.tlog
-/intermediate/Release/IntroToDXR.tlog/link.command.1.tlog
-/intermediate/Release/IntroToDXR.tlog/link.read.1.tlog
-/intermediate/Release/IntroToDXR.tlog/link.write.1.tlog
-/intermediate/Release/Utils.obj
-/intermediate/Release/Window.obj
-/intermediate/Release/main.obj
-/intermediate/Release/vc141.pdb
 /bin/IntroToDXR.pdb
 /bin/IntroToDXR_d.exe
+/bin/IntroToDXR_d.ilk
 /bin/IntroToDXR_d.pdb
